--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="profile">
           <img src="utkarsh.png.png" alt="profile img">
           <h2>Hello.</h2>
-          <p> <strong>I am persuing B.tech from <em> <a href="https://smu.edu.in/smit.html/.co/"> Sikkim Manipal Institute Of Technology</a></em>  </strong>. </p> 
+          <p> <strong> I am persuing B.tech from Sikkim Manipal Institute Of Technology </strong>. </p> 
 <p class="intro"> I am a CSE sophomore at Sikkim Manipal Institute Of Technology and a front hand dveloper.
     Have clear and ardent vision of work. Has an impetus to improve and get better day by day.
     As a CSE enthusiast, I have gain knowledge about C++ and JAVA coding lnguages. </p>
