--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="profile">
           <img src="utkarsh.png.png" alt="profile img">
           <h2>Hello.</h2>
-          <p> <strong>I am persuing B.tech from <em> Sikkim Manipal Institute Of Technology</em>  </strong>. </p> 
-<p class="intro"> I am a CSE sophomore at Sikkim Manipal Institute Of Technology and a front hand dveloper.
+          <p> <strong>I am persuing B.Tech from <em> Sikkim Manipal Institute Of Technology</em>  </strong>. </p> 
+<p class="intro"> I am a CSE sophomore at Sikkim Manipal Institute Of Technology and a Frontend developer.
     Have clear and ardent vision of work. Has an impetus to improve and get better day by day.
-    As a CSE enthusiast, I have gain knowledge about C++ and JAVA coding lnguages. </p>
+    As a CSE enthusiast, I have gained knowledge about C/C++ and Python. </p>
         </div>
         <hr>
         <div class="skills">
@@ -39,19 +39,19 @@
             <img class="skills" src="skills.png.png" alt="skills img">
             <table cellspacing= "7">
                 <tr>
-                        <td>C Language</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td>C </td>
+                        <td>⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>C ++ Language</td>
-                        <td>⭐⭐⭐⭐⭐</td>
+                        <td>C++</td>
+                        <td>⭐⭐⭐</td>
                     </tr>
                     <tr>
-                        <td>Java Language</td>
+                        <td>Python</td>
                  <td>⭐⭐⭐⭐</td>
                 </tr>
                 <tr>
-                  <td>D.S.A</td>
+                  <td>DSA</td>
                   <td>⭐⭐⭐</td>
 
                 </tr>
